# dispatcher

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  run-integration-test.sh
.github/workflows/: codeql.yml  test.yml
dispatcher/: constants.py  consumer.py  producer.py  settings.py  tasks.py
docker/: test.Dockerfile  test.Dockerfile.dockerignore
manifests/: deployment.yaml  flower.yaml  namespace.yaml  pv-volume-claim.yaml  rabbitmq.yaml  rbac.yaml  test-deployment.yaml
tests/: test_dispatch.py  test_get_logs.py  test_sleep.py
tests/integration/: conftest.py  test_job_dispatcher.py
tests/load/: locustfile.py
tests/unit/: test_consumer.py  test_job_dispatcher.py
tests/utils/: test_consume.py  test_dispatch.py
