[project]
name = "dispatcher"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marius Žalinauskas", email = "marius.zalinauskas@gmail.com"},
]
dependencies = ["celery>=5.4.0", "kubernetes>=32.0.1", "gevent>=24.11.1", "pydantic>=2.11.1", "pydantic-settings>=2.8.1"]
requires-python = ">=3.12,<4.0.0"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
dispatcher = "dispatcher.main:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    "kubernetes-stubs>=22.6.0.post1",
    "celery-types>=0.23.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
strict = true

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
test-dispatch.cmd = "python tests/test_dispatch.py"
test-dispatch.env = {PYTHONPATH = "."}
prod.cmd = "celery -A dispatcher.tasks worker --loglevel=info --pool=gevent --concurrency=250"
prod.env = {K8S_IN_CLUSTER = "true"}
