[project]
name = "dispatcher"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marius Žalinauskas", email = "marius.zalinauskas@gmail.com"},
]
dependencies = ["celery>=5.5.0", "kubernetes>=32.0.1", "pydantic>=2.11.1", "pydantic-settings>=2.8.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
dispatcher = "dispatcher.main:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    # Both type stub packages are quite outdated and give false errors.
    "kubernetes-stubs>=22.6.0.post1",
    "celery-types>=0.23.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
strict = true

[tool.ruff]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint = "ruff check ."
type-check = "mypy . --strict"
test-unit.cmd = "pytest tests/unit"
prod.cmd = "celery -A dispatcher.tasks worker --loglevel=info"
prod.env = {K8S_IN_CLUSTER = "true"}
